--- a/styles/output.css
+++ b/styles/output.css
@@ -596,44 +596,44 @@ video {
   position: relative;
 }
 
-.top-0 {
-  top: 0px;
-}
-
-.top-10 {
-  top: 2.5rem;
-}
-
-.top-2 {
-  top: 0.5rem;
-}
-
-.top-3 {
-  top: 0.75rem;
-}
-
-.top-9 {
-  top: 2.25rem;
-}
-
-.top-6 {
-  top: 1.5rem;
-}
-
-.top-20 {
-  top: 5rem;
+.left-40 {
+  left: 10rem;
 }
 
 .top-96 {
   top: 24rem;
 }
 
-.left-20 {
-  left: 5rem;
+.top-\[\] {
+  top: ;
 }
 
-.left-40 {
-  left: 10rem;
+.top-\[300px\] {
+  top: 300px;
+}
+
+.top-\[400px\] {
+  top: 400px;
+}
+
+.top-\[500px\] {
+  top: 500px;
+}
+
+.top-\[00px\] {
+  top: 00px;
+}
+
+.top-\[0px\] {
+  top: 0px;
+}
+
+.top-\[450px\] {
+  top: 450px;
+}
+
+.top-\[470px\] {
+  top: 470px;
 }
 
 .m-auto {
@@ -646,6 +646,10 @@ video {
 
 .mb-14 {
   margin-bottom: 3.5rem;
+}
+
+.mb-2\.5 {
+  margin-bottom: 0.625rem;
 }
 
 .mb-20 {
@@ -676,6 +680,10 @@ video {
   margin-left: 24rem;
 }
 
+.ml-\[200px\] {
+  margin-left: 200px;
+}
+
 .mr-2 {
   margin-right: 0.5rem;
 }
@@ -692,20 +700,20 @@ video {
   margin-top: 1.25rem;
 }
 
-.mb-2\.5 {
-  margin-bottom: 0.625rem;
+.ml-\[500px\] {
+  margin-left: 500px;
 }
 
-.mb-12 {
-  margin-bottom: 3rem;
+.ml-\[600px\] {
+  margin-left: 600px;
 }
 
-.mb-1 {
-  margin-bottom: 0.25rem;
+.ml-\[650px\] {
+  margin-left: 650px;
 }
 
-.mb-2 {
-  margin-bottom: 0.5rem;
+.ml-\[640px\] {
+  margin-left: 640px;
 }
 
 .flex {
@@ -734,6 +742,22 @@ video {
 
 .w-full {
   width: 100%;
+}
+
+.max-w-\[1200\] {
+  max-width: 1200;
+}
+
+.max-w-\[1200px\] {
+  max-width: 1200px;
+}
+
+.max-w-\[\] {
+  max-width: ;
+}
+
+.max-w-1 {
+  max-width: 0.25rem;
 }
 
 .cursor-pointer {
@@ -793,6 +817,10 @@ video {
   border-bottom-width: 2px;
 }
 
+.border-b-2 {
+  border-bottom-width: 2px;
+}
+
 .border-l-2 {
   border-left-width: 2px;
 }
@@ -801,18 +829,9 @@ video {
   border-right-width: 2px;
 }
 
-.border-b-2 {
-  border-bottom-width: 2px;
-}
-
 .border-slate-400 {
   --tw-border-opacity: 1;
   border-color: rgb(148 163 184 / var(--tw-border-opacity, 1));
-}
-
-.bg-red-500 {
-  --tw-bg-opacity: 1;
-  background-color: rgb(239 68 68 / var(--tw-bg-opacity, 1));
 }
 
 .bg-slate-700 {
@@ -828,11 +847,6 @@ video {
 .bg-yellow-600 {
   --tw-bg-opacity: 1;
   background-color: rgb(202 138 4 / var(--tw-bg-opacity, 1));
-}
-
-.bg-slate-500 {
-  --tw-bg-opacity: 1;
-  background-color: rgb(100 116 139 / var(--tw-bg-opacity, 1));
 }
 
 .px-14 {
@@ -940,12 +954,12 @@ video {
   font-weight: 500;
 }
 
-.font-semibold {
-  font-weight: 600;
-}
-
 .font-normal {
   font-weight: 400;
+}
+
+.font-semibold {
+  font-weight: 600;
 }
 
 .text-black {
